# agents_forked

./: .gitignore  requirements2.txt  stock_prices.csv
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  app.py
1_foundations/me/: summary.txt
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
2_openai/deep_research/: email_agent.py
2_openai/deep_stock_reserach_and_extract_relevant_prices.py/: deep_research.py  finance_agents.py  research_manager.py  task_classifier_agent.py  tracking_over_famouse_value_investors_agent.py  update_stock_prices.py  value_investor_agent.py
3_crew/coder_2/: pyproject.toml
3_crew/debate2/: pyproject.toml
3_crew/engineering_team2/: pyproject.toml
3_crew/financial_researchermy/: README.md  pyproject.toml
3_crew/financial_researchermy/output/: report.md
3_crew/financial_researchermy/src/financial_researchermy/: crew.py  main.py
3_crew/financial_researchermy/src/financial_researchermy/config/: agents.yaml  tasks.yaml
3_crew/stock_picker2/: explanation_how_to_run.md  pyproject.toml
4_langgraph/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  app.py  memory_ya.db-shm  memory_ya.db-wal  sidekick.py  sidekick_tools.py
4_langgraph/sandbox/: HR_Job_Opportunities_Updated_in_Netanya.md  NetanyaHR.md  Updated_HR_Job_Opportunities_in_Netanya.md  stock_picking.md
5_autogen/: 1_lab1_autogen_agentchat.ipynb  2_lab2_autogen_agentchat.ipynb  3_lab3_autogen_core.ipynb  4_lab4_autogen_distributed.ipynb  agent.py  creator.py  world.py
5_autogen/sandbox/: flights.md
(+30 files in other folders)
