[project]
name = "financial_researchermy"
version = "0.1.0"
description = "financial_researchermy using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.4.1",
]

[project.scripts]
financial_researchermy = "financial_researchermy.main:run"
run_crew = "financial_researchermy.main:run"
train = "financial_researchermy.main:train"
replay = "financial_researchermy.main:replay"
test = "financial_researchermy.main:test"
run_with_trigger = "financial_researchermy.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
